Fixed misalignment issue

--- a/apps/office-booker/src/app/bookings/map-bookings/map-bookings.component.css
+++ b/apps/office-booker/src/app/bookings/map-bookings/map-bookings.component.css
@@ -64,7 +64,7 @@
     margin-top: 1rem;
     /* margin-right: 40px; */
     justify-content: space-between;
-    position: relative;
+    /* position: relative; */
     /* width: auto; */
     /* height: auto; */
     /* float: right; */
